2010-12-17  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Compile warning introduced in r74129
        https://bugs.webkit.org/show_bug.cgi?id=51181

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::RenderThemeGtk::gtkContainer):

2010-12-17  James Simonsen  <simonjam@chromium.org>

        Reviewed by Darin Fisher.

        [Web Timing] Add sslHandshakeStart to interface

        https://bugs.webkit.org/show_bug.cgi?id=50400

        Test: http/tests/misc/webtiming-ssl.php

        * page/PerformanceTiming.cpp:
        (WebCore::PerformanceTiming::connectStart): Update comment.
        (WebCore::PerformanceTiming::connectEnd): Remove SSL time.
        (WebCore::PerformanceTiming::sslHandshakeStart): Added.
        * page/PerformanceTiming.h: Added sslHandshakeStart.
        * page/PerformanceTiming.idl: Ditto.

2010-12-17  James Simonsen  <simonjam@chromium.org>

        Reviewed by Darin Fisher.

        [Web Timing] Navigation type enums should begin with TYPE_
        https://bugs.webkit.org/show_bug.cgi?id=51200

        * page/PerformanceNavigation.cpp:
        (WebCore::PerformanceNavigation::type): Added TYPE_ to navigation types.
        * page/PerformanceNavigation.h: Ditto and added TYPE_RESERVED.
        * page/PerformanceNavigation.idl: Ditto.

2010-12-17  Steve Block  <steveblock@google.com>

        Unreviewed build fix.

        Fix build when Geolocation is disabled.

        No new tests, build fix only.

        * page/Geolocation.h:

2010-12-17  Patrick Gansterer  <paroga@webkit.org>

        Unreviewed. WinCE build fix.

        * platform/graphics/GraphicsContext.h:

2010-12-17  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: remove unnecessary dependencies from InspectorBackendStub.

        InspectorBackendStub is a transport-only thing but it has dependencies with