@@ -1,3 +1,14 @@
+2010-12-17  Andreas Kling  <andreas.kling@nokia.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Avoid unnecessary calls to GraphicsContextPlatformPrivate::p()
+        https://bugs.webkit.org/show_bug.cgi?id=49954
+
+        * platform/graphics/qt/GraphicsContextQt.cpp:
+        (WebCore::GraphicsContext::pushTransparencyLayerInternal):
+        (WebCore::GraphicsContext::beginTransparencyLayer):
+
 2010-12-17  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Reviewed by Martin Robinson.
